--- a/app/src/main/res/layout/activity_welcome.xml
+++ b/app/src/main/res/layout/activity_welcome.xml
@@ -10,27 +10,21 @@
         android:id="@+id/backgroundImg"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:contentDescription="@string/background_image"
         android:scaleType="centerCrop"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0"
-        app:srcCompat="@mipmap/welcomescreenbg"
-        android:contentDescription="@string/background_image" />
+        app:srcCompat="@mipmap/welcomescreenbg" />
 
     <ImageView
         android:id="@+id/logoImg"
-        android:layout_width="100dp"
-        android:layout_height="40dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:contentDescription="@string/logo_image"
         app:layout_constraintBottom_toBottomOf="@+id/backgroundImg"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/backgroundImg"
+        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.04000002"
-        app:srcCompat="@mipmap/swooshlogo"
-        android:contentDescription="@string/logo_image" />
+        app:srcCompat="@mipmap/swooshlogo" />
 
     <TextView
         android:id="@+id/goAllInTxt"
