--- a/app/src/main/res/drawable/swoosh_button_check.xml
+++ b/app/src/main/res/drawable/swoosh_button_check.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="@color/colorPrimary" />
+    <solid android:color="@android:color/holo_green_light" />
     <stroke
-        android:width="3sp"
+        android:width="4sp"
         android:color="@android:color/white" />
 </shape>
