--- a/app/src/main/res/layout/activity_skill.xml
+++ b/app/src/main/res/layout/activity_skill.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".SkillActivity">
+    tools:context=".controller.SkillActivity">
 
     <ImageView
         android:id="@+id/imageView2"
@@ -53,26 +53,28 @@
         app:layout_constraintTop_toBottomOf="@+id/textView2">
 
         <ToggleButton
-            android:id="@+id/toggleButton3"
+            android:id="@+id/beginnerSkillBtn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="12dp"
             android:layout_weight="1"
             android:background="@drawable/swoosh_toggle"
+            android:onClick="onBeginnerClicked"
             android:textColor="@android:color/white"
-            android:textOff="@string/girl"
-            android:textOn="@string/girl" />
+            android:textOff="@string/beginer"
+            android:textOn="@string/beginer" />
 
         <ToggleButton
-            android:id="@+id/toggleButton5"
+            android:id="@+id/ballerSkillBtn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="12dp"
             android:layout_weight="1"
             android:background="@drawable/swoosh_toggle"
+            android:onClick="onBallerClicked"
             android:textColor="@android:color/white"
-            android:textOff="@string/boy"
-            android:textOn="@string/boy" />
+            android:textOff="@string/baller"
+            android:textOn="@string/baller" />
     </LinearLayout>
 
     <Button
@@ -85,6 +87,7 @@
         android:background="@drawable/swoosh_button"
         android:fontFamily="@font/muli_bold"
         android:text="@string/finish"
+        android:onClick="onFinishClicked"
         android:textColor="@android:color/white"
         android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="@+id/imageView2"
