--- a/app/src/main/res/layout/category_list_item.xml
+++ b/app/src/main/res/layout/category_list_item.xml
@@ -8,19 +8,21 @@
     <ImageView
         android:id="@+id/backgroundImg"
         android:layout_width="match_parent"
-        android:layout_height="160dp"
+        android:layout_height="200dp"
         android:scaleType="centerCrop"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@mipmap/shirtimage" />
 
     <TextView
         android:id="@+id/titleTxt"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:fontFamily="@font/muli_bold"
         android:text="@string/background_image"
+        android:textAlignment="textEnd"
         android:textColor="@android:color/white"
         android:textSize="22sp"
         app:layout_constraintBottom_toBottomOf="@+id/backgroundImg"
