--- a/app/src/main/res/layout/activity_product.xml
+++ b/app/src/main/res/layout/activity_product.xml
@@ -4,15 +4,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".swag.controller.MainSwagActivity">
-
+    tools:context=".swag.controller.ProductActivity">
     <TextView
         android:id="@+id/textView5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:fontFamily="@font/muli_bold"
-        android:text="@string/category"
+        android:text="@string/product"
         android:textColor="@android:color/holo_green_dark"
         android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -29,5 +28,4 @@
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView5" />
-
 </androidx.constraintlayout.widget.ConstraintLayout>
